# crypto-oracle

./: .gitignore  .slugignore  Procfile  README.md  pyproject.toml  requirements.txt
.ebextensions/: 01_packages.config  02_python.config  03_update_stocks_cron.config  04_update_lending_rate.config
cryptooracle/settings/: base.py  local-development.py  production.py
notebooks/: 3-Facebook-Prophet.ipynb  5-Univariate-Forecasts-Prices-Daily.ipynb  6-Multivariate-Forecasts-Prices-Daily.ipynb  7-Univariate-Forecasts-LogReturns-Daily.ipynb  BitCoin_LSTM.ipynb  BitCoin_fbProphet.ipynb  Exploring-BTC-data.ipynb  Hourly_MinMaxPrices_BTC_data.ipynb  Minutely_MinMaxPrices_BTC_data.ipynb  django_for_jupyter.py  utils.ipynb
predictor/: admin.py  models.py  urls.py  views.py
predictor/management/commands/: forecast.py  import_stocks.py  train_model.py  update_lending_rate.py  update_stocks.py
predictor/templates/predictor/: base.html  evaluations.html  forecast.html  index.html  lending_rates.html
utils/: utils.py
