[tool.poetry]
name = "crypto-oracle"
version = "0.1.0"
description = ""
authors = ["lee <lee@logicon.io>"]

[tool.poetry.dependencies]
python = "^3.7"
"coinapi.rest.v1" = "^1.3"
Django = "3.1.6"
django-bootstrap-datepicker-plus = "3.0.5"
django-bootstrap4 = "2.3.1"
django-fontawesome-5 = "1.0.18"
django-heroku = "0.3.1"
django-model-utils = "4.1.1"
django-pandas = "0.6.4"
gunicorn = "20.0.4"
Keras = "2.4.3"
matplotlib = "3.3.4"
numpy = "1.19.5"
plotly = "4.14.3"
psycopg2 = "2.8.6"
psycopg2-binary = "2.8.6"
python-dateutil = "2.8.1"
pytz = "2021.1"
requests = "2.25.1"
scipy = "1.6.0"
scikit-learn = "0.24.1"
tensorflow = "2.4.1"
whitenoise = "5.2.0"

[tool.poetry.dev-dependencies]
coloredlogs = "^15.0"
django-debug-toolbar = "3.2"
django-extensions = "3.1.1"
fbprophet = "0.7.1"
ipykernel = "5.4.3"
ipython = "7.20.0"
nbclient = "0.5.2"
Werkzeug = "1.0.1"
jupyter = "1.0.0"
jupyter-client = "6.1.11"
jupyter-console = "6.2.0"
jupyter-core = "4.7.1"
jupyterlab-pygments = "0.1.2"
jupyterlab-widgets = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
